# bf-transpiler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: bf.c  bf.h  main.c  stack.c
src/core/: core.c  core.h  instruction.c  instruction.h  loop.c  loop.h  memory.c  memory.h  print.c  print.h  type.h
src/utils/: stack.c  stack.h
